(BSR)[PRO] feat: remove old select and fix last spacing

--- a/pro/src/components/Bookings/Components/PreFilters/FilterByBookingStatusPeriod/FilterByBookingStatusPeriod.module.scss
+++ b/pro/src/components/Bookings/Components/PreFilters/FilterByBookingStatusPeriod/FilterByBookingStatusPeriod.module.scss
@@ -14,8 +14,8 @@
   }
 
   &-status select {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
   }
 }
 
