--- a/pro/src/pages/IndividualOffers/IndividualOffersContainer/IndividualOffersContainer.module.scss
+++ b/pro/src/pages/IndividualOffers/IndividualOffersContainer/IndividualOffersContainer.module.scss
@@ -21,3 +21,7 @@
     margin-top: var(--size-spacing-xxl);
   }
 }
+
+.select-filter {
+  width: 100%;
+}
