--- a/pro/src/ui-kit/form/MultiSelect/MultiSelect.module.scss
+++ b/pro/src/ui-kit/form/MultiSelect/MultiSelect.module.scss
@@ -165,7 +165,7 @@
 }
 
 .search-input {
-  margin: 0 rem.torem(24px);
+  margin: 0 var(--size-spacing-l);
   margin-bottom: var(--size-spacing-s);
 }
 
